examples/errors/assign_int_to_char.alan
main(): proc
    x: byte;
{
    x = 42;
}